[package]
name = "solana-bls12-381"
description = "Solana BLS12-381"
documentation = "https://docs.rs/solana-bls12-381"
version = "0.1.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
include = ["src/**/*"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[dependencies]
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
solana-define-syscall = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-bls12-381-syscall = { workspace = true }

[target.'cfg(target_os = "solana")'.dependencies]
solana-define-syscall = { workspace = true }

[dev-dependencies]
array-bytes = { workspace = true }

[lints]
workspace = true
