[package]
name = "solana-feature-set"
description = "Solana runtime features."
documentation = "https://docs.rs/solana-feature-set"
version = "2.2.4"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
lazy_static = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
solana-pubkey = { workspace = true }

[target.'cfg(target_os = "solana")'.dependencies]
ahash = { workspace = true, default-features = false, features = ["std", "no-rng"] }

[target.'cfg(not(target_os = "solana"))'.dependencies]
ahash = { workspace = true, default-features = true }
solana-hash = { workspace = true }
solana-sha256-hasher = { workspace = true }

[features]
frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
