[package]
name = "solana-program-stubs"
description = "Solana program syscall stub implementations for non-SBF targets"
documentation = "https://docs.rs/solana-program-stubs"
version = "2.2.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[dependencies]
base64 = { workspace = true }
lazy_static = { workspace = true }
solana-account-info = { workspace = true }
solana-instruction = { workspace = true }
solana-program-error = { workspace = true }
solana-program-memory = { workspace = true }
solana-pubkey = { workspace = true }

[lints]
workspace = true
