[package]
name = "solana-program-wasm"
description = "Solana Program Wasm"
documentation = "https://docs.rs/solana-sdk"
version = "2.2.2"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-instruction = { workspace = true, features = ["std"] }
solana-program = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
getrandom = { workspace = true, features = ["js", "wasm-bindgen"] }
wasm-bindgen = { workspace = true }
log = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true
