[package]
name = "solana-sdk-wasm-js"
description = "Solana SDK Wasm JS"
documentation = "https://docs.rs/solana-sdk-wasm-js"
version = "1.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-instruction = { workspace = true, features = ["std"] }
solana-program = { workspace = true }
solana-sdk = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wasm-bindgen = { workspace = true }
log = { workspace = true }
js-sys = { workspace = true }

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
