[package]
name = "solana-sdk-wasm-js"
description = "Solana SDK Wasm JS"
documentation = "https://docs.rs/solana-sdk-wasm-js"
version = "2.0.0"
rust-version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-address = { workspace = true, features = ["curve25519", "sha2", "std"] }
solana-hash = { workspace = true }
solana-instruction = { workspace = true, features = ["std"] }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-packet = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true, features = ["std", "verify", "wincode"] }
wincode = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }
# solana-ed25519 -> rand 0.10 pulls getrandom 0.4, which needs the wasm_js
# backend enabled explicitly for wasm32-unknown-unknown.
# so we have to have both versions of getrandom enabled for wasm32-unknown-unknown.
# the alternative is to move the whole sdk to rand 0.10.0
getrandom_0_4 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
js-sys = { workspace = true }
log = { workspace = true }
wasm-bindgen = { workspace = true }

[lints]
workspace = true
