[package]
name = "solana-serde-varint"
description = "Solana definitions for integers that serialize to variable size"
documentation = "https://docs.rs/solana-serde-varint"
version = "3.0.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["serde"]
serde = ["dep:serde"]
wincode = ["dep:wincode"]

[dependencies]
serde = { workspace = true, optional = true }
wincode = { workspace = true, features = ["alloc"], optional = true }

[dev-dependencies]
bincode = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
serde_derive = { workspace = true }
solana-short-vec = { workspace = true, features = ["serde"] }
wincode = { workspace = true, features = ["alloc"] }

[[bench]]
name = "wincode_write"
harness = false
required-features = ["wincode"]
