[package]
name = "solana-sha256-hasher"
description = "Solana SHA256 hashing"
documentation = "https://docs.rs/solana-sha256-hasher"
version = "2.2.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
offchain = ["dep:sha2"]

[dependencies]
solana-hash = { workspace = true }

[dev-dependencies]
solana-sha256-hasher = { path = ".", features = ["offchain"] }

[target.'cfg(not(target_os = "solana"))'.dependencies]
sha2 = { workspace = true, optional = true }

[target.'cfg(target_os = "solana")'.dependencies]
solana-define-syscall = { workspace = true }

[lints]
workspace = true
