[package]
name = "solana-stake-history"
description = "Types and utilities for the Solana StakeHistory sysvar."
documentation = "https://docs.rs/solana-stake-history"
version = "1.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
serde = ["dep:serde", "dep:serde_derive", "serde/alloc"]
sysvar = ["dep:solana-sdk-ids", "dep:solana-sysvar-id"]
wincode = ["dep:wincode", "wincode/alloc"]

[dependencies]
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
solana-clock = { workspace = true }
solana-frozen-abi = { workspace = true, optional = true, features = ["frozen-abi"] }
solana-frozen-abi-macro = { workspace = true, features = ["frozen-abi"], optional = true }
solana-sdk-ids = { workspace = true, optional = true }
solana-sysvar-id = { workspace = true, optional = true }
wincode = { workspace = true, optional = true }

[dev-dependencies]
solana-stake-history = { path = ".", features = ["sysvar"] }

[lints]
workspace = true
